# FiZap

./: .gitignore  .gitmodules
client/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
client/src/: lib.rs  main.rs  store.rs  utils.rs
client/src/components/: file.rs  file_manager.rs  header.rs  sidebar.rs  sidebar_button.rs
client/src/pages/: dashboard.rs
client/styles/: input.css  output.css
server/: Cargo.toml  dist
server/assets/: index.html
server/src/: auth.rs  main.rs  middleware.rs  utils.rs
server/src/routes/: auth.rs  files.rs
