[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.3.0"
gloo-console = "0.2.3"
log = "0.4.19"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"
yew = { version = "0.20.0", features = ["csr", "hydration"] }
yew-router = "0.17.0"
yew_icons = {version = "0.7.2", features = ["bootstrap", "BootstrapFileEarmark", "BootstrapFileEarmarkImage"]}
web-sys = {version = "0.3.64", features = ["IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit", "HtmlDivElement"]}
reqwasm = "0.5.0"
serde = "1.0.164"
gloo = "0.8.1"
yewdux = "0.9.3"