[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.18", features = ["headers"]}
axum-extra = { version = "0.7.4", features = ["cookie"] }
bcrypt = "0.14.0"
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
log = "0.4.19"
mongodb = "2.5.0"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
serde = "1.0.164"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
