[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.18", features = ["headers"]}
bcrypt = "0.14.0"
chrono = "0.4.26"
clap = { version = "4.3.4", features = ["derive"] }
dotenv = "0.15.0"
http-body = "0.4.5"
jsonwebtoken = "8.3.0"
log = "0.4.19"
mongodb = "2.5.0"
serde = "1.0.164"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
yew = { version = "0.20.0", features = ["ssr"] }
client = {path = "../client"}
futures = "0.3.28"
